[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_ruta/ruta.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/enemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level_ruta/player_ruta.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/level_ruta/level_ruta.gd" type="Script" id=6]

[node name="level_ruta" type="Node"]
script = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 1 )]
follow_viewport_enable = true

[node name="Control" parent="HUD" index="0"]
margin_left = 283.0
margin_top = 1.0
margin_right = -283.0
margin_bottom = 1.0

[node name="HBox1" parent="HUD/Control/MarginContainer" index="0"]
margin_right = 439.0

[node name="Hbox2" parent="HUD/Control/MarginContainer/HBox1" index="0"]
margin_right = 217.0

[node name="lifeRect" parent="HUD/Control/MarginContainer/HBox1/Hbox2" index="0"]
margin_right = 106.0

[node name="lifeCountLabel" parent="HUD/Control/MarginContainer/HBox1/Hbox2" index="1"]
margin_left = 110.0
margin_right = 217.0

[node name="Hbox3" parent="HUD/Control/MarginContainer/HBox1" index="1"]
margin_left = 221.0
margin_right = 439.0

[node name="scoreLabel" parent="HUD/Control/MarginContainer/HBox1/Hbox3" index="0"]
margin_right = 109.0

[node name="scoreCountLabel" parent="HUD/Control/MarginContainer/HBox1/Hbox3" index="1"]
margin_left = 113.0
margin_right = 218.0

[node name="stage" parent="." instance=ExtResource( 2 )]

[node name="ruta" parent="stage" index="0"]
position = Vector2( 289.268, 3.36359 )

[node name="ruta_1" type="Position2D" parent="stage"]
position = Vector2( 361.144, 682.802 )

[node name="ruta_3" type="Position2D" parent="stage"]
position = Vector2( 664.867, 682.802 )

[node name="ruta_start" type="Position2D" parent="stage"]
position = Vector2( 523.628, 686.255 )

[node name="Camera2D" type="Camera2D" parent="stage"]
position = Vector2( 516.568, 380.496 )
current = true

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( -230.739, 398.55 )
speed = 10
maxLife = 3

[node name="enemySpawner" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="player" to="player" method="_on_player_area_entered"]
[connection signal="die" from="player" to="HUD" method="_on_player_die"]
[connection signal="life_changed" from="player" to="HUD" method="_on_player_life_changed"]
[connection signal="switchL" from="player" to="." method="_on_player_switchL"]
[connection signal="switchR" from="player" to="." method="_on_player_switchR"]

[editable path="HUD"]
[editable path="stage"]
